Watch server_set_data failure in dbus__server_setup_with_g_main

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=29884
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>